Feature/AX-4398 - new rest endpoints for device/user fields (#3383)
* fields REST public api endpoints

* guess what? ordering of routes matters.

* add get devices/users fields endpoints

* test new get devices/users fields endpoints

* update API docs for new devices and users field routes
